# grantManager

./: .env  .gitignore  README.md  compose.yaml  postgres.json  set_env.ps1
backend/: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/app/: __init__.py  crud.py  main.py  models.py  permissions.py  rule_templates.py  rules.py  triggers.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 140e7baa97d7_update_exp_model4.py  1578c1379d7b_table_foreign_keys.py  190d45187adb_update_exp_model.py  205996f4fb44_update_exp_model2.py  24de618a7ad9_added_other_rules_routes.py  41c96c77143a_expense_update.py  48ef14ee7ab8_rule_enabled.py  4c203bef5d2a_added_filter_table.py  7f773ae79e12_new_rules_system.py  80e9ca1cb85f_added_filter_table.py  82e2b5d48000_rule_system_tables.py  834de18c19ae_new_base.py  91ae20efcb73_added_budgets.py  95fd7e7c1c85_update_grant_model.py  9a63c550252b_base.py  a0f49c38fa90_update_rules.py  a183a4d4189e_api_elements.py  b1dc3ba1b856_update_exp_model3.py  de826639ded0_static.py  e0692df488d1_base.py  e43967b59740_helper_function.py  efb8c986b203_update_exp_model5.py  (+1 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py
backend/app/meta/: common.py  triggers.py
backend/backend/: settings.py
backend/service/: db.sqlite3  manage.py  settings.py
backend/service/internal/: apps.py  models.py  signals.py  urls.py  views.py
backend/service/server/: settings.py  urls.py
backend/tests/: conftest.py  test_grant_roles.py  test_grants.py  test_rules.py  test_users.py
(+401 files in other folders)
